--- a/Bibliografia.bib
+++ b/Bibliografia.bib
@@ -322,4 +322,16 @@
   year      = {2014},
 }
 
+@InProceedings{Liu,
+  author = {Wei Liu and Sanjay Chawla},
+  title  = {A Robust Decision Tree Algorithm for Imbalanced Data Sets},
+}
+
+@InProceedings{Ustuner2016,
+  author    = {M. Ustuner},
+  title     = {BALANCED VS IMBALANCED TRAINING DATA: CLASSIFYING RAPIDEYE DATA WITH SUPPORT VECTOR MACHINES},
+  booktitle = {The International Archives of the Photogrammetry, Remote Sensing and Spatial Information Sciences, Volume XLI-B7},
+  year      = {2016},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
