--- a/capitulos/EstadoArte.tex
+++ b/capitulos/EstadoArte.tex
@@ -72,7 +72,8 @@ Utilizando este modelo, un texto quedará representado como una combinación linea
 
 Los métodos de clasificación supervisados utilizan un conjunto de documentos de ejemplo para cada una de las categorías que presenta la variable objetivo (a clasificar). Estos algoritmos, realizan una etapa de entrenamiento donde se presentan los patrones de ejemplo de modo que ante futuros patrones, el algoritmo será capaz de clasificar en alguna de las clases contenidas en el conjunto de ejemplo. Dentro de este proceso, existen muchas variables que influirán en los resultados del sistema como el tamaño del conjunto de ejemplo, la elección del algoritmo de clasificación o los parámetros de inicialización del mismo.
 
-Existen numerosos tipos de algoritmos de clasificación, a continuación se indican los más importantes para clasificación textual:\todo{Se puede ampliar explicación de cada método o hacer nuevos apartados si fuera necesario}
+Existen numerosos tipos de algoritmos de clasificación, a continuación se indican los más importantes para clasificación textual:
+
 \begin{itemize}
 	\itemsep0em 
 	\item Naive Bayes: Está basado en la teoría de la decisión de Bayes: la teoría de las probabilidades condicionadas. Por tanto, el problema de la clasificación se reduce al cálculo de las probabilidades a posteriori de una clase dado un documento.
